<resources>
    <string name="app_name">Planner App</string>
    <string name="delete">Delete</string>
    <string name="placeholder">PLACEHOLDER</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- To Do Activity Strings -->
    <string name="to_do_title">To Do List</string>
    <string name="btn_add_to_do_item">Add To List</string>
    <string name="new_to_do_item_title">New To Do Item</string>
    <string name="new_to_do_hint">Task</string>

    <!-- Reminders Activity Strings -->
    <string name="reminders_title">Reminders</string>
    <string name="create_a_reminder">Create a Reminder</string>
    <string name="reminder_title">Set Title</string>
    <string name="reminder_description">Set Description</string>
    <string name="reminder_set_date">Set Date</string>
    <string name="reminder_set_time">Set Time</string>
    <string name="reminder_error_blank_title">Reminder title cannot be blank!</string>
    <string name="reminder_error_blank_description">Reminder description cannot be blank!</string>
    <string name="reminder_error_past_time">Selected time is in the past!</string>

    <!-- Goal Activity Strings -->
    <string name="create_goal">Create Goal</string>
    <string name="your_goals">Your Goals</string>
    <string name="setup_finance_goal">Setup Finance Goal</string>
    <string name="no_finance_goal_set">No finance goal set</string>
    <string name="update_progress">Update Progress</string>
    <string name="finance_goal_progress">Finance Goal Progress</string>
    <string name="update_finance_goal">Update Finance Goal</string>
    <string name="add_sub_goal">Add Sub-Goal</string>
    <string name="goal_title">Goal Title</string>
    <string name="subgoal">Subgoal</string>
</resources>