<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CreateReminderActivity"
        android:background="#3498db">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp">

        <TextView
                android:text="@string/create_a_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTxt_reminderName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:hint="@string/reminder_title"
                android:textColorHint="@color/material_dynamic_neutral80" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTxt_reminderDescription"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textColorHint="@color/material_dynamic_neutral80"
                android:hint="@string/reminder_description" />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_setReminderDate"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp" />

            <Button
                    android:text="@string/reminder_set_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setDate" />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                    android:text="@string/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_setReminderTime"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            <Button
                    android:text="@string/reminder_set_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setTime" />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_createReminderMsg"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <Button
                        android:text="Cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/material_dynamic_neutral60"
                        android:onClick="cancel" />

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <Button
                        android:text="Create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="create" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>