<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GoalActivity"
        android:background="#3498db">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

            <TextView
                    android:text="@string/your_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_gravity="bottom" />

            <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/home_48px"
                    android:id="@+id/imageButton"
                    android:background="@null"
                    app:tint="@color/white"
                    android:onClick="loadHomepage" />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rounded"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

            <TextView
                    android:text="@string/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_financeGoalHeader"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:text="@string/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_financeGoalDescription" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:id="@+id/progBar_financeGoal" />

                <TextView
                        android:text="@string/placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtView_financeGoalProgress"
                        android:layout_marginLeft="10dp" />
            </LinearLayout>

            <Button
                    android:text="@string/update_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_updateFinanceGoalProgress"
                    android:onClick="setFinanceGoalProgress" />

            <Button
                    android:text="@string/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_financeGoalData"
                    android:onClick="setFinanceGoalData" />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

            <TextView
                    android:text="Other Goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical" />

            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            <Button
                    android:text="Add Goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:onClick="createNewGoal" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recView_goals" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>